Use JDK 17 + fixes some "deprecation warnings"